# schema_scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/schema_scraper/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/schema_scraper/backends/: __init__.py
src/schema_scraper/backends/mssql/: __init__.py  connection.py  extractors.py
src/schema_scraper/backends/mysql/: __init__.py  connection.py  extractors.py
src/schema_scraper/backends/oracle/: __init__.py  connection.py  extractors.py
src/schema_scraper/backends/postgresql/: __init__.py  connection.py  extractors.py
src/schema_scraper/backends/snowflake/: __init__.py  connection.py  extractors.py
src/schema_scraper/backends/sqlite/: __init__.py  connection.py  extractors.py
src/schema_scraper/base/: __init__.py  connection.py  extractor.py  models.py
src/schema_scraper/generators/: __init__.py  markdown.py
tests/: __init__.py  test_config.py  test_models.py
tests/integration/: docker-compose.yml  run_tests.sh
tests/integration/mssql/: init.sql  init_crlf.sql
tests/integration/mysql/: init.sql
tests/integration/oracle/: init.sql
tests/integration/output/FREEPDB1/: README.md
tests/integration/output/FREEPDB1/functions/: README.md  TESTUSER.GET_CUSTOMER_NAME.md
tests/integration/output/FREEPDB1/schemas/: README.md  TESTUSER.md
tests/integration/output/FREEPDB1/sequences/: README.md  TESTUSER.ISEQ$$_72827.md  TESTUSER.ISEQ$$_72853.md  TESTUSER.ORDER_SEQ.md  TESTUSER.PRODUCT_SEQ.md
tests/integration/output/FREEPDB1/synonyms/: README.md  TESTUSER.CUSTS.md  TESTUSER.PRODS.md
tests/integration/output/FREEPDB1/tables/: README.md  TESTUSER.CUSTOMERS.md  TESTUSER.ORDERS.md  TESTUSER.ORDER_ITEMS.md  TESTUSER.PRODUCTS.md
tests/integration/output/FREEPDB1/triggers/: README.md  TESTUSER.TRG_CUSTOMERS_UPDATE_TIMESTAMP.md
tests/integration/output/FREEPDB1/types/: README.md  TESTUSER.ADDRESS_TYPE.md
tests/integration/output/FREEPDB1/views/: README.md  TESTUSER.CUSTOMER_ORDER_SUMMARY.md  TESTUSER.LOW_STOCK_PRODUCTS.md
tests/integration/output/test/: README.md
tests/integration/output/test/schemas/: README.md  main.md
tests/integration/output/test/tables/: README.md  main.customers.md  main.order_items.md  (+2 more)
tests/integration/output/testdb/: README.md
tests/integration/postgresql/: init.sql
tests/integration/sqlite/: init.sql  test.db
(+73 files in other folders)
